// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChirpCard for deletion render correct for a deleted chirp 1`] = `
Array [
  <View
    style={
      Object {
        "borderColor": "gray",
        "borderTopWidth": 0,
        "borderWidth": 1,
        "flexDirection": "column",
        "padding": 10,
        "width": 600,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "width": 60,
          }
        }
      >
        ProfileIcon
      </View>
      <View
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <View
          style={
            Object {
              "fontSize": 18,
              "marginTop": 7,
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 18,
                "fontWeight": "600",
              }
            }
          >
            oKHk3AivbpNXk_SfFcHDaVHcCcY8IBfHE7auXJ7h4ms=
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "gray",
              "fontSize": 18,
              "paddingBottom": 20,
              "paddingTop": 10,
              "width": 520,
            }
          }
        >
          This chirp was deleted
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "fontSize": 18,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            {"name":"chatbubbles","size":16,"color":"black"}
            <Text>
                0
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "marginTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "marginLeft": "auto",
          }
        }
      >
        <time
          dateTime="2020-12-31T23:00:00.000Z"
          title="2020-12-31 23:00"
        >
          4 months ago
        </time>
      </View>
    </View>
  </View>,
  <Modal
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  />,
]
`;

exports[`ChirpCard for deletion renders correctly for non-sender 1`] = `
Array [
  <View
    style={
      Object {
        "borderColor": "gray",
        "borderTopWidth": 0,
        "borderWidth": 1,
        "flexDirection": "column",
        "padding": 10,
        "width": 600,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "width": 60,
          }
        }
      >
        ProfileIcon
      </View>
      <View
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <View
          style={
            Object {
              "fontSize": 18,
              "marginTop": 7,
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 18,
                "fontWeight": "600",
              }
            }
          >
            oKHk3AivbpNXk_SfFcHDaVHcCcY8IBfHE7auXJ7h4ms=
          </Text>
        </View>
        <Text
          style={
            Object {
              "fontSize": 18,
              "paddingBottom": 20,
              "paddingTop": 10,
              "width": 520,
            }
          }
        >
          Don't panic.
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "fontSize": 18,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="thumbs-up"
            >
              {"name":"thumbs-up-sharp","size":16,"color":"black"}
            </View>
            <Text>
                1
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="thumbs-down"
            >
              {"name":"thumbs-down-sharp","size":16,"color":"black"}
            </View>
            <Text>
                0
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="heart"
            >
              {"name":"heart","size":16,"color":"black"}
            </View>
            <Text>
                0
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            {"name":"chatbubbles","size":16,"color":"black"}
            <Text>
                0
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "marginTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "marginLeft": "auto",
          }
        }
      >
        <time
          dateTime="2020-12-31T23:00:00.000Z"
          title="2020-12-31 23:00"
        >
          4 months ago
        </time>
      </View>
    </View>
  </View>,
  <Modal
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  />,
]
`;

exports[`ChirpCard for deletion renders correctly for sender 1`] = `
Array [
  <View
    style={
      Object {
        "borderColor": "gray",
        "borderTopWidth": 0,
        "borderWidth": 1,
        "flexDirection": "column",
        "padding": 10,
        "width": 600,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "width": 60,
          }
        }
      >
        ProfileIcon
      </View>
      <View
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <View
          style={
            Object {
              "fontSize": 18,
              "marginTop": 7,
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 18,
                "fontWeight": "600",
              }
            }
          >
            oKHk3AivbpNXk_SfFcHDaVHcCcY8IBfHE7auXJ7h4ms=
          </Text>
        </View>
        <Text
          style={
            Object {
              "fontSize": 18,
              "paddingBottom": 20,
              "paddingTop": 10,
              "width": 520,
            }
          }
        >
          Don't panic.
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "fontSize": 18,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="thumbs-up"
            >
              {"name":"thumbs-up-sharp","size":16,"color":"black"}
            </View>
            <Text>
                1
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="thumbs-down"
            >
              {"name":"thumbs-down-sharp","size":16,"color":"black"}
            </View>
            <Text>
                0
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="heart"
            >
              {"name":"heart","size":16,"color":"black"}
            </View>
            <Text>
                0
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            {"name":"chatbubbles","size":16,"color":"black"}
            <Text>
                0
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "marginTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "marginRight": "auto",
          }
        }
      >
        <View
          accessibilityLabel="deleteChirpButton"
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          {"name":"close-outline","size":20,"color":"red"}
        </View>
      </View>
      <View
        style={
          Object {
            "marginLeft": "auto",
          }
        }
      >
        <time
          dateTime="2020-12-31T23:00:00.000Z"
          title="2020-12-31 23:00"
        >
          4 months ago
        </time>
      </View>
    </View>
  </View>,
  <Modal
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  />,
]
`;

exports[`ChirpCard for reaction renders correctly with reaction 1`] = `
Array [
  <View
    style={
      Object {
        "borderColor": "gray",
        "borderTopWidth": 0,
        "borderWidth": 1,
        "flexDirection": "column",
        "padding": 10,
        "width": 600,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "width": 60,
          }
        }
      >
        ProfileIcon
      </View>
      <View
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <View
          style={
            Object {
              "fontSize": 18,
              "marginTop": 7,
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 18,
                "fontWeight": "600",
              }
            }
          >
            oKHk3AivbpNXk_SfFcHDaVHcCcY8IBfHE7auXJ7h4ms=
          </Text>
        </View>
        <Text
          style={
            Object {
              "fontSize": 18,
              "paddingBottom": 20,
              "paddingTop": 10,
              "width": 520,
            }
          }
        >
          Don't panic.
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "fontSize": 18,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="thumbs-up"
            >
              {"name":"thumbs-up-sharp","size":16,"color":"black"}
            </View>
            <Text>
                1
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="thumbs-down"
            >
              {"name":"thumbs-down-sharp","size":16,"color":"black"}
            </View>
            <Text>
                0
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="heart"
            >
              {"name":"heart","size":16,"color":"black"}
            </View>
            <Text>
                0
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            {"name":"chatbubbles","size":16,"color":"black"}
            <Text>
                0
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "marginTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "marginRight": "auto",
          }
        }
      >
        <View
          accessibilityLabel="deleteChirpButton"
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          {"name":"close-outline","size":20,"color":"red"}
        </View>
      </View>
      <View
        style={
          Object {
            "marginLeft": "auto",
          }
        }
      >
        <time
          dateTime="2020-12-31T23:00:00.000Z"
          title="2020-12-31 23:00"
        >
          4 months ago
        </time>
      </View>
    </View>
  </View>,
  <Modal
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  />,
]
`;

exports[`ChirpCard for reaction renders correctly without reaction 1`] = `
Array [
  <View
    style={
      Object {
        "borderColor": "gray",
        "borderTopWidth": 0,
        "borderWidth": 1,
        "flexDirection": "column",
        "padding": 10,
        "width": 600,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "width": 60,
          }
        }
      >
        ProfileIcon
      </View>
      <View
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <View
          style={
            Object {
              "fontSize": 18,
              "marginTop": 7,
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 18,
                "fontWeight": "600",
              }
            }
          >
            Anonymous
          </Text>
        </View>
        <Text
          style={
            Object {
              "fontSize": 18,
              "paddingBottom": 20,
              "paddingTop": 10,
              "width": 520,
            }
          }
        >
          Ignore me
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "fontSize": 18,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="thumbs-up"
            >
              {"name":"thumbs-up-sharp","size":16,"color":"black"}
            </View>
            <Text>
                0
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="thumbs-down"
            >
              {"name":"thumbs-down-sharp","size":16,"color":"black"}
            </View>
            <Text>
                0
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="heart"
            >
              {"name":"heart","size":16,"color":"black"}
            </View>
            <Text>
                0
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            {"name":"chatbubbles","size":16,"color":"black"}
            <Text>
                0
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "marginTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "marginLeft": "auto",
          }
        }
      >
        <time
          dateTime="2020-12-31T23:00:00.000Z"
          title="2020-12-31 23:00"
        >
          4 months ago
        </time>
      </View>
    </View>
  </View>,
  <Modal
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  />,
]
`;
